--- a/springboot-security/src/main/resources/application.yaml
+++ b/springboot-security/src/main/resources/application.yaml
@@ -11,13 +11,10 @@ spring:
       #
       # serverTimezone=UTC 时区会导致时间字段与实际查询时间不一致( 相差8-14小时不等)
       # allowMultiQueries 允许一次性执行多条 sql ，可以用于批量操作
-#      url: jdbc:mysql://192.168.0.197:3306/springboot-useful?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&autoReconnect=true&useUnicode=true&useSSL=true&serverTimezone=UTC
-#      username: root
-#      password: w2j946^FQ=7K8
-      url: jdbc:mysql://localhost:3306/springboot-useful?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&autoReconnect=true&useUnicode=true&useSSL=true&serverTimezone=UTC
-      username: test
-      password: alexliu
-      initial-size: 1                            # 配置初始化大小（默认0）、最小、最大（默认8）
+      url: jdbc:mysql://192.168.0.197:3306/springboot-useful?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&autoReconnect=true&useUnicode=true&useSSL=true&serverTimezone=UTC
+      username: root
+      password: w2j946^FQ=7K8
+      initial-size: 1                           # 配置初始化大小（默认0）、最小、最大（默认8）
       min-idle: 1
       max-active: 20
       max-wait: 60000                           # 配置获取连接等待超时的时间
