--- a/springboot-security-redis-nginx/pom.xml
+++ b/springboot-security-redis-nginx/pom.xml
@@ -144,7 +144,7 @@
                 <artifactId>maven-dependency-plugin</artifactId>
                 <executions>
                     <execution>
-                        <id>copy-dependencies</id>
+                        <id>copy-lib</id>
                         <phase>package</phase>
                         <goals>
                             <goal>copy-dependencies</goal>
