--- a/springboot-security-redis-nginx/src/main/resources/application.yaml
+++ b/springboot-security-redis-nginx/src/main/resources/application.yaml
@@ -86,7 +86,7 @@ spring:
   redis:
     host: 127.0.0.1
     port: 6379
-    #password:
+    password: springuseful123456
     jedis:
       pool:
         max-idle: 8
